# testing-claude-code

./: .gitignore  .mcp.json  CMakeLists.txt  churn_prediction.cpp  churn_prediction.ipynb  churn_prediction_analysis.ipynb  churn_prediction_class_diagram.html  dissertation_chapters.docx  duc_le_churn_thesis_notebook.ipynb  duc_le_churn_thesis_notebook.py  generate_dissertation.py  generate_notebook.py  generate_thesis_notebook.py  proposal_extracted.txt  smoke_test_executed.ipynb
.claude/: settings.local.json
thesis_outputs/: cv_results.csv  holdout_results.csv  runtime_tradeoff_summary.csv
